--- a/dockercompose/docker-compose.yml
+++ b/dockercompose/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   database:
           build:
@@ -9,6 +11,8 @@ services:
             MYSQL_DATABASE: studentapp 
           ports:
             - "3306:3306"
+          volumes:
+            - mysql_data:/var/lib/mysql  
           networks:
             - app-network
 
@@ -28,5 +32,11 @@ services:
     depends_on:
       - db
     networks:
-      - app-network      
+      - app-network 
+
+networks:
+  app-network:
+
+volumes:
+  mysql_data:           
 
