--- a/dockercompose/docker-compose.yml
+++ b/dockercompose/docker-compose.yml
@@ -38,5 +38,45 @@ networks:
   app-network:
 
 volumes:
-  mysql_data: /var/lib/mysql          
+  mysql_data: /var/lib/mysql  
+
+
+prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ../Monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - app-network
+
+grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - app-network
+    depends_on:
+      - prometheus
+
+node-exporter:
+    image: prom/node-exporter
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    networks:
+      - app-network
+
+mysql-exporter:
+    image: prom/mysqld-exporter
+    container_name: mysql-exporter
+    environment:
+      - DATA_SOURCE_NAME=root:123@(my-mysql-db:3306)/
+    ports:
+      - "9104:9104"
+    networks:
+      - app-network
+
 
