--- a/Monitoring/prometheus.yml
+++ b/Monitoring/prometheus.yml
@@ -2,6 +2,10 @@ global:
   scrape_interval: 5s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['prometheus:9090']
+
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
@@ -9,3 +13,8 @@ scrape_configs:
   - job_name: 'mysql-exporter'
     static_configs:
       - targets: ['mysql-exporter:9104']
+
+  - job_name: 'backend-service'
+    static_configs:
+      - targets: ['backend-service:8080']
+
