--- a/Database/Dockerfile
+++ b/Database/Dockerfile
@@ -2,7 +2,7 @@ FROM mariadb:latest
 
 ENV MARIADB_ROOT_PASSWORD=123
 
-COPY student-rds.sql /docker-entrypoint-initdb.d/
+COPY student-rds.sql/docker-entrypoint-initdb.d/
 
 EXPOSE 3306
 
